--- a/clientSide/thekitchendiaries/src/Components/Navbar/Navbar.css
+++ b/clientSide/thekitchendiaries/src/Components/Navbar/Navbar.css
@@ -20,7 +20,7 @@
     margin-bottom:10px;
 }
 .searchbar{
-    width:187px;
+    width:220px;
     height: 30px;
     margin-left:700px;
     margin-top: 15px;
@@ -36,6 +36,7 @@
 .search{
     width:35px;
     height: 32px;
+    margin-left: -30px;
     margin-top: 15px;
     margin-bottom: 10px;
 }
