--- a/clientSide/thekitchendiaries/src/Component/Navbar/Navbar.css
+++ b/clientSide/thekitchendiaries/src/Component/Navbar/Navbar.css
@@ -3,7 +3,10 @@
     width:50px;
     height:50px;
     border-radius: 40px;
-    margin: 6px 0px 5px 200px;
+    margin: 6px 5px 5px 200px;
+}
+.color{
+  color: black;
 }
 .nav{
     background-color:rgb(220, 164, 11);
@@ -15,80 +18,49 @@
 
 
 .topics{
-    margin-left:35px;
+    margin:25px 5px 10px 35px;
     font-size: 17px;
-    margin-bottom:10px;
+    
 }
 .searchbar{
     width:220px;
     height: 30px;
-    margin-left:700px;
-    margin-top: 15px;
+    margin:15px 0px 10px 700px;
     border: none;
-    margin-bottom: 10px;
+  
 }
-.firstContainer{
-    display: flex;
-}
-.secondContainer{
-    display: flex;
-}
+
 .search{
     width:35px;
     height: 32px;
-    margin-left: -30px;
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin: 15px 0px 5px -30px;
+  
 }
 
 .loginlogo{
     width:50px;
     height:50px;
-    border-radius:25px;
-    margin-top:6px;
-    margin-left: 30px;
-    margin-bottom: 10px;
+    border-radius:40px;
+    margin:6px 0px 10px 38px;
 }
 
 .dropbtn {
-    color: rgb(7, 7, 7);
+    
     font-size: 17px;
     border: none;
     background: none;
-    margin-left:35px;
-    margin-bottom:10px;
+    margin: 25px 5px 10px 37px;
 
   }
-.homepg{
-    margin-left:200px;
-    margin-bottom:10px;
-    font-size: 17px;
-    color:black;
-    border-bottom: none;
-  }
-.drop{
-    color: rgb(7, 7, 7);
-    font-size: 17px;
-    border: none;
-    background: none;
-    margin-left: 38px;
-    margin-bottom:10px;
 
 
-  }
   
 .dropdown {
     position: relative;
     display: inline-block;
   } 
   
-.dropdown-content {
-    display: none;
-    position: absolute; 
-    background-color: #f1f1f1; 
-    min-width: 160px; 
-    margin-left: 40px;
-  }
+
 .dropdownContent {
     display: none;
     position: absolute; 
@@ -96,15 +68,7 @@
     min-width: 160px; 
     margin-left: 40px;
   }
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block; 
-    font-size: 15px;
-     
-     
-  }
+
 .dropdownContent a {
     color: black;
     padding: 12px 16px;
@@ -124,4 +88,11 @@
 .login{
     font-size: 17px;
     margin-left: 35px;
+}
+.displays{
+    display: flex;
+}
+.link{
+    text-decoration: none;
+    color: black;
 }
